fixed wrapping

--- a/style.css
+++ b/style.css
@@ -26,17 +26,13 @@ body{
 
 
 }
-.logo1 {
+.logo3 {
     padding:10px;
-    height: 20%;
-    width: 20%;
+    height: 80%;
+    width: 80%;
 
 }
-.logo2 {
-    padding:10px;
-    height:60% ;
-    width: 60%;
-}
+
 
 .navbar-dark .navbar-nav .nav-link {
     color: rgba(255,255,255,0.9);
